  * We switch to a more flexible implementation of Barnard test by 
    Peter Calhoun's Exact package.
  * Minor changes to PlotLinesA() to be able to easier add lines.  
  * ToWrd.TMod() uses a more sophisticated export logic for splitting the
    columns of a resulting data.frame to a Word table compatible 
    character matrix.
  * Format() interpretes negative digits in the same mannor as round.
  * MAE(), MSE(), RMSE() will pass on dots arguments to mean() allowing to 
    trim the data.
  * WrdBookmark()'s argument bookmark has been renamed to name to 
    be consistent with the rest of the word bookmark functions.
  * TOne()'s "fmt.pval"" argument has been replaced with the more general 
    "fmt"", which allow to define formats for counts, numbers, percentages 
    AND p-values.
  * SplitPath() gets a further information "fullpath".  
  
  
BUGFIXES:
  * Format() will respect eps if defined in a format template "fmt" now.

DEPRECATED:
  * CentralValue() did not survive the "general usefulness-checks".


DescTools 0.99.36 (2020-05-22)
------------------------------

UPDATED FUNCTIONS:
  * Plot Desc.table object now reverses the default color for the second
    mosaicplot to ensure the upper left cell has the same color in both 
    cases.
  * Desc.table() will also report relative risks for rows when verbose is 
    set to 3.
  * Documentation and github integration have been improved (thanks to 
    Vilmantas Gegzna).
  * TMod() will report number of variables in the model and the
    number of estimated coefficients.
  * tol in UnirootAll has been substantially reduced as the default 
    was too coarse.
  * Rev() gets a new interface for arrays.
  * ScheffeTest() gets a formula interface.
  * plot.Desc.numnum can insert a linear model and exponential line now.
  * SpearmanRho() gets a new algorithm for tables and no longer crudely 
    inflates a frequency table to single case presentation.
    
BUGFIXES: