@@ -20,7 +20,7 @@ UPDATED FUNCTIONS:
   * ToWrd.TMod() uses a more sophisticated export logic for splitting the
     columns of a resulting data.frame to a Word table compatible 
     character matrix.
-  * Format() interpretes negative digits in the same mannor as round.
+  * Format() interpretes negative digits in the same manner as round.
   * MAE(), MSE(), RMSE() will pass on dots arguments to mean() allowing to 
     trim the data.
   * WrdBookmark()'s argument bookmark has been renamed to name to 
@@ -29,6 +29,8 @@ UPDATED FUNCTIONS:
     "fmt"", which allow to define formats for counts, numbers, percentages 
     AND p-values.
   * SplitPath() gets a further information "fullpath".  
+  * StrTrunc() gets two new arguments ellipsis and can truncate strings
+    on word boundaries with useWordBoundaries.
   
   
 BUGFIXES:
